[package]
name = "dns_dumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
reqwest = {version="0.11.11",features = ["cookies"] }
regex = "1.6.0"
tokio = { version = "1.20.1", features = ["full"] }
rand = "0.8.5"
lazy_static = "1.4.0"
reqwest_cookie_store = "0.4.0"
scraper = "0.13.0"
[lib]
name="proxies"
path="src/proxies.rs"
